<resources>
    <string name="app_name">WIFI Transfer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="text_unknown_file">unknown file</string>
    <string name="text_client">Client</string>
    <string name="text_list">List</string>
    <string name="text_last">Recent</string>
    <string name="text_file">File</string>
    <string name="text_msg_tile">Message Tile</string>
    <string name="text_msg_content">Message Content</string>
    <string name="text_no_more">No more</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_file_client">File Client</string>
    <string name="text_not_access_file_permission_settings">Unable to open file access permission Settings</string>
    <string name="text_port_greater_than_zero">The port must be greater than 0</string>
    <string name="text_user_name_can_not_null">The user name cannot be empty</string>
    <string name="text_pw_can_not_null">The user password cannot be empty</string>
    <string name="text_ip_format_incorrect">The ip address format is incorrect</string>
    <string name="text_save">Save</string>
    <string name="text_upload_path_illegal">The upload path is invalid. Please modify it</string>
    <string name="text_download_path_illegal">The download path is invalid. Please modify it</string>
    <string name="text_settings">Settings</string>
    <string name="text_test">Test</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_none_transfer">No transfer task</string>
    <string name="text_file_server">File Server</string>
    <string name="text_all_select">All</string>
    <string name="text_all_select_cancel">Unselect</string>
    <string name="text_item_select">Select</string>
    <string name="text_image">Image</string>
    <string name="text_video">Video</string>
    <string name="text_music">Music</string>
    <string name="text_txt">Text</string>
    <string name="text_apk">APK</string>
    <string name="text_zip">Archive</string>
    <string name="text_doc">DOC</string>
    <string name="text_exc">EXC</string>
    <string name="text_ppt">PPT</string>
    <string name="text_pdf">PDF</string>
    <string name="text_other">Other</string>
    <string name="text_file_not_exist_or_format_unsupported">The file does not exist or the format is not supported</string>
    <string name="text_sort_by_name">Name</string>
    <string name="text_sort_by_type">Type</string>
    <string name="text_sort_by_time">Time Ascending</string>
    <string name="text_sort_descendant_by_time">Time Descending</string>
    <string name="text_sort_by_size">Size Ascending</string>
    <string name="text_sort_descendant_by_size">Size Descending</string>
    <string name="text_connect_by_scanning_and_keep_screen_on">Scan for connection \n Keeping the screen on</string>
    <string name="text_none">None</string>
    <string name="text_type_">Type:</string>
    <string name="text_modify_time_">ModifiedTime:</string>
    <string name="text_size_">Size:</string>
    <string name="text_path_">Path:</string>
    <string name="text_open_file">Open file</string>
    <string name="text_fail_to_connect_server">Failed to connect to server</string>
    <string name="text_address">Address</string>
    <string name="text_port">Port</string>
    <string name="text_disconnect_server">Server disconnected</string>
    <string name="text_connect_success">Connected</string>
    <string name="text_connect_fail">Connection exception</string>
    <string name="text_connect_ip_fail">The connected IP address is abnormal</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_file_transfer">File Transfer</string>
    <string name="text_server">Server</string>
    <string name="text_instruction">Instruction</string>
    <string name="text_disconnect_wifi">Not connected to wifi</string>
    <string name="text_port_must_greater_than_2000">The port must be larger than 2000</string>
    <string name="text_upload_success">Upload successful</string>
    <string name="text_upload_fail">Upload failed</string>
    <string name="text_tip">Tip</string>
    <string name="text_count">.</string>
    <string name="text_downloading_and_exit_or_not">Downloading, quit or not</string>
    <string name="text_downloading_uploading_and_exit_or_not">Uploading and downloading, quit or not</string>
    <string name="text_uploading_and_exit_or_not">Uploading, quit or not</string>
    <string name="text_file_info">File Info</string>
    <string name="text_quit_playing">Quit playing?</string>
    <string name="text_dir">Folder</string>
    <string name="text_input_name">Input name</string>
    <string name="text_name_illegal">Name is invalid.</string>
    <string name="text_downloading">Downloading</string>
    <string name="text_download_fail">Download failed</string>
    <string name="text_download_success">Download successful</string>
    <string name="text_del_success">Delete successful</string>
    <string name="text_del_one_file_at_least">Select at least one file to delete</string>
    <string name="text_del_or_not">Delete?</string>
    <string name="text_rename">Rename</string>
    <string name="text_rename_need_select_one_file">To rename requires selecting a file</string>
    <string name="text_rename_only_one_file">Only one file can be selected for renaming</string>
    <string name="text_file_large_for_open_or_nor">The file is large, opening it after loading it or not</string>
    <string name="text_file_not_exist">File does not exist</string>
    <string name="text_file_open_fail">Open failure</string>
    <string name="text_remote_file">Remote File</string>
    <string name="text_local_file">Local File</string>
    <string name="text_user_name">User Name</string>
    <string name="text_pw">Password</string>
    <string name="text_scanning">Scan</string>
    <string name="text_connect">Connect</string>
    <string name="text_download_path">Download Path</string>
    <string name="text_upload_path">Upload Path</string>
    <string name="text_start">Start</string>
    <string name="text_select_file">Select File</string>
    <string name="text_not_obtain_ip">Failed to obtain the IP address</string>
</resources>