<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Custom Dialog Title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/color_434242"
        android:textSize="14sp"
        tools:text="@string/text_test"
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg"
        android:backgroundTint="@color/color_FFF5F5F5"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/color_FFF5F5F5"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/btn_cancel"
        android:text="@string/text_cancel"
        android:paddingHorizontal="5dp"
        android:textStyle="bold"
        android:textColor="@color/color_1296db"
        android:textSize="14sp"
        android:layout_width="70dp"
        android:layout_height="45dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel"
        android:backgroundTint="@color/color_FFF5F5F5"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/color_FFF5F5F5"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/btn_ok"
        android:text="@string/text_ok"
        android:paddingHorizontal="5dp"
        android:textStyle="bold"
        android:textColor="@color/color_1296db"
        android:textSize="14sp"
        android:layout_width="70dp"
        android:layout_height="45dp" />


</androidx.constraintlayout.widget.ConstraintLayout>