<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/layout_title"
        android:id="@+id/layout_title" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            android:textColor="@color/color_383838"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_ip"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/svg_ip_icon" />
            <EditText
                android:id="@+id/et_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:textColorHint="@color/color_6b434242"
                android:hint="127.0.0.1"
                android:inputType="number|numberDecimal|numberSigned"
                android:digits="0123456789."
                android:background="@android:color/transparent"
                android:textColor="@color/color_434242"
                android:textSize="15sp" />
        </LinearLayout >
        <View
            android:id="@+id/view_ip_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_EEF0F4" />
        <TextView
            android:id="@+id/tv_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_port"
            android:textColor="@color/color_383838"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_port"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/svg_port_icon" />
            <EditText
                android:id="@+id/et_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:textColorHint="@color/color_6b434242"
                android:hint="2222"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:textColor="@color/color_434242"
                android:textSize="15sp" />
        </LinearLayout >
        <View
            android:id="@+id/view_port_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_EEF0F4" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_name"
            android:textColor="@color/color_383838"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/svg_user_name_icon" />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:textColorHint="@color/color_6b434242"
                android:hint="admin"
                android:inputType="textPersonName"
                android:background="@android:color/transparent"
                android:textColor="@color/color_434242"
                android:textSize="15sp" />
        </LinearLayout >
        <View
            android:id="@+id/view_name_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_EEF0F4" />
        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pw"
            android:textColor="@color/color_383838"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/iv_pw"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/svg_pw_icon" />
            <EditText
                android:id="@+id/et_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:textColorHint="@color/color_6b434242"
                android:hint="admin"
                android:inputType="textVisiblePassword"
                android:background="@android:color/transparent"
                android:textColor="@color/color_434242"
                android:textSize="15sp" />
        </LinearLayout >
        <View
            android:id="@+id/view_pw_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_EEF0F4" />

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/color_991296db"
            app:cornerRadius="20dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_991296db"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/tv_scan"
            android:text="@string/text_scanning"
            android:paddingHorizontal="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="120dp"
            android:layout_height="45dp" />

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/color_991296db"
            app:cornerRadius="20dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_991296db"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/tv_connect"
            android:text="@string/text_connect"
            android:paddingHorizontal="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="120dp"
            android:layout_height="45dp" />

    </LinearLayout >

</androidx.constraintlayout.widget.ConstraintLayout >